font and colors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     />
     <title>My Choose-Your-Own Adventure!</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!-- Google Font: Shadows Into Light -->
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <base href="./" />
   </head>
   <body>
@@ -85,58 +87,53 @@
     </div>
     <!-- End Bowline content -->
 
-    <!-- Content area for Option 3 (Buntline knot info) - AI-generated -->
+    <!-- Content area for Option 3 (Sheet Bend info) - AI-generated -->
     <div id="buntline-content" class="buntline-content hidden">
-      <h2>The Buntline (Sliding Loop) Knot</h2>
+      <h2>The Sheet Bend (Joining Knot)</h2>
       <pre class="ascii-art">
-     Sliding Loop (Buntline)
-     
-          Working End
-                 |
-                 v
-         ________|________
-        /                 \
-       |      Main Line    |
-       |                   |
-       |    /---Loop----   |
-       |   /   (slides)  \ |
-       |  /               \|
-       | /____Loop Tightens_\
-       |
-       |---- Loop slides along the rope
-       |---- Used for bundling items
-       |---- Creates adjustable loops
-      </pre>
-      
-      <h3>How the Buntline Works:</h3>
-      <p>
-        The Buntline creates a <strong>sliding loop</strong> that can be tightened 
-        or loosened by pulling the working end. Unlike the fixed Bowline, this loop 
-        can move along the rope and change size. This makes it perfect for:
-      </p>
-      <ul>
-        <li>Bundling items together (like sailbags or gear)</li>
-        <li>Creating adjustable loops that can get tighter</li>
-        <li>Securing loose items that need different tension</li>
-        <li>Quick, flexible knots that are easy to untie</li>
-      </ul>
+    Sheet Bend (Joining Knot)
 
-      <h3>How to Tie a Buntline:</h3>
+      Short End    Long End
+          \          /
+           \        /
+            \______/  <-- bend in the long rope
+             \    /
+              \  /  <-- short rope tucks under and around
+               \/
+               /\
+              /  \
+             /____\
+    (Short rope joined to long rope)
+      </pre>
+
+      <h3>How the Sheet Bend Works:</h3>
+      <p>
+        The Sheet Bend is used to join two ropes of the same or different
+        thickness. It works by making a simple bend in one rope and then
+        passing the end of the second rope through and around that bend.
+        When tightened, the ropes pinch together and hold securely under
+        tension. It's especially good for tying ropes of different diameters.
+      </p>
+
+      <h3>How to Tie a Sheet Bend:</h3>
       <ol>
-        <li><strong>Form a loop</strong> with the working end of the rope</li>
-        <li><strong>Bring the working end up</strong> through the loop from underneath</li>
-        <li><strong>Wrap it around the main line</strong> (going back behind itself)</li>
-        <li><strong>Tuck the working end back into the loop</strong></li>
-        <li><strong>Pull the main line</strong> to tighten - the loop will slide and grip</li>
-        <li>The tighter you pull, the <strong>more the loop grips</strong> without slipping</li>
+        <li><strong>Form a simple bend</strong> (a U-shape) with the thicker or
+            main rope; hold the bend so the ends point away from you.</li>
+        <li><strong>Pass the working end</strong> of the second (shorter) rope
+            up through the bend from behind.</li>
+        <li><strong>Wrap it around</strong> the outside of the bend once, then
+            tuck it under where it came through.</li>
+        <li><strong>Pull both standing ends</strong>—the knot will snug up and
+            hold. For extra security, use a Double Sheet Bend by wrapping the
+            short end around the bend twice before tucking.</li>
       </ol>
 
-      <p><strong>Tip:</strong> The Buntline is great for "cinching" loads because the 
-      more you pull, the tighter it gets - making it very secure even under stress!</p>
+      <p><strong>Tip:</strong> Use a Double Sheet Bend when the ropes are
+      very different thicknesses or when extra security is needed.</p>
 
       <button id="close-buntline" class="close-button">Close</button>
     </div>
-    <!-- End Buntline content -->
+    <!-- End Sheet Bend content (re-uses Buntline container id) -->
 
     <hr />
     <small>
