update dropdown options and add Back Splice content; implement beep sound for interactions

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         Click me for options ▼
       </button>
       <div id="dropdown-menu" class="dropdown-menu">
-        <a href="#" class="dropdown-item">Option 1</a>
-        <a href="#" class="dropdown-item">Option 2</a>
-        <a href="#" class="dropdown-item">Option 3</a>
-        <a href="#" class="dropdown-item">Option 4</a>
+        <a href="#" class="dropdown-item">Don't Click Me</a>
+        <a href="#" class="dropdown-item">The Bowline Knot</a>
+        <a href="#" class="dropdown-item">The Sheet Bend</a>
+        <a href="#" class="dropdown-item">Back Splice</a>
       </div>
     </div>
     <!-- End AI-generated dropdown menu -->
@@ -134,6 +134,46 @@
       <button id="close-buntline" class="close-button">Close</button>
     </div>
     <!-- End Sheet Bend content (re-uses Buntline container id) -->
+
+    <!-- Content area for Option 4 (Back Splice) - AI-generated -->
+    <div id="backsplice-content" class="buntline-content hidden">
+      <h2>The Back Splice (End Finish)</h2>
+      <pre class="ascii-art">
+      Back Splice (end finish)
+
+        \====\  <-- woven strands tucked back into the rope
+        |    |
+        |    |  <- standing part
+        |____|
+       /      \
+      /  splice \
+     /___________\
+    (end is finished to prevent fraying)
+      </pre>
+
+      <h3>How the Back Splice Works:</h3>
+      <p>
+        A Back Splice finishes the end of a twisted rope by unlaying the
+        strands and weaving them back into the standing part. This creates a
+        tidy, bulky end that resists fraying and holds together without heat
+        or whipping. It's commonly used on natural-fiber and some synthetic
+        ropes when a permanent, neat finish is needed.
+      </p>
+
+      <h3>How to Tie a Back Splice (basic steps):</h3>
+      <ol>
+        <li><strong>Unlay</strong> the rope end a short distance (separate the strands).</li>
+        <li><strong>Form a small loop</strong> in the standing part for each strand to pass through.</li>
+        <li><strong>Weave each strand</strong> back into the rope: pass a strand over and under the adjacent strand(s), following the lay of the rope.</li>
+        <li><strong>Tighten</strong> each tuck snugly and trim any excess if needed.</li>
+        <li><strong>Dress the splice</strong> by smoothing the strands so the finish is neat and compact.</li>
+      </ol>
+
+      <p><strong>Tip:</strong> Practice on scrap rope first — a back splice is tidy and durable, but the technique varies slightly with rope size and construction.</p>
+
+      <button id="close-backsplice" class="close-button">Close</button>
+    </div>
+    <!-- End Back Splice content -->
 
     <hr />
     <small>
