--- a/citations.html
+++ b/citations.html
@@ -17,6 +17,11 @@
       <li>Template: original project template from Mr. Hinkle.</li>
       <!-- List any other sources you used as you worked on 
        the project, including giving credit for images, etc. -->
+      <li>Dropdown menu code snippet: generated with AI assistance.</li>
+      <li>Wrong Choice animation: generated with AI assistance.</li>
+      <li>Bowline knot ASCII art and explanation: generated with AI assistance.</li>
+      <li>Sheet Bend knot ASCII art and explanation: generated with AI assistance.</li>
+      <li>Back Splice knot ASCII art and explanation: generated with AI assistance.</li>
     </ul>
   </body>
 </html>
